--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .aws-sam/
-build/
+bin/
 
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
