--- a/template.yml
+++ b/template.yml
@@ -179,8 +179,8 @@ Resources:
         Variables:
           SLACK_TOKEN: !Ref SlackToken
           SLACK_SIGNING_SECRET: !Ref SlackSigningSecret
-          DYNAMODB_ENDPOINT: ""
-          DYNAMODB_TABLE_NAME: !Ref UserDynamoDBTable
+          DYNAMODB_ENDPOINT: "http://docker.for.mac.host.internal:8000"
+          DYNAMODB_TABLE_NAME: bZappTable
       Events:
         Request:
           Properties:
@@ -208,6 +208,8 @@ Resources:
         Variables:
           SLACK_TOKEN: !Ref SlackToken
           SLACK_SIGNING_SECRET: !Ref SlackSigningSecret
+          DYNAMODB_ENDPOINT: "http://docker.for.mac.host.internal:8000"
+          DYNAMODB_TABLE_NAME: bZappTable
       Events:
         Request:
           Properties:
