--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -20,9 +20,6 @@ jobs:
 
     - name: Test
       run: make test
-
-    - name: Build
-      run: make clean handlers
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
